--- a/ProteusCapture.ipynb
+++ b/ProteusCapture.ipynb
@@ -14,13 +14,16 @@
         "#  Step 2. Upload your recorded output from your device by dragging and dropping the \"out.wav\"\n",
         "#          file to the file browser in the left hand window in Colab. Ensure that this file is named\n",
         "#          \"out.wav\".\n",
+        "#          Parameterized capture of a full knob requires 5 separate .wav output files, named:\n",
+        "#             \"out1.wav\", \"out2.wav\", \"out3.wav\", \"out4.wav\", \"out5.wav\"\n",
         "#\n",
         "#  Step 3. Run the SETUP ENVIRONMENT section by clicking the run arrow on the top left of the box.\n",
         "#          Should take a few minutes. Scroll down to next step when finished.\n",
         "#\n",
-        "#  Step 4. Choose one (and only one) of the next 3 options as applicable to your captured device. This\n",
+        "#  Step 4. Choose one (and only one) of the next 4 options as applicable to your captured device. This\n",
         "#          will begin the model training process. It should take about 10 minutes with GPU runtime selected.\n",
         "#          The training may finish before reaching 300 epochs, this is normal.\n",
+        "#          Parameterized capture of a full knob will take significantly longer, 30+ minutes.\n",
         "#          \n",
         "#  Step 5. Run this section to generate a Proteus compatible model file. Download from the \n",
         "#          left hand file browser by right clicking the \"newProteusModel.json\" filename in the left hand menu and \n",
@@ -107,6 +110,25 @@
     {
       "cell_type": "code",
       "source": [
+        "# STEP 4d.  Run this to start capture of a Knob/Control on your amp or pedal (Parameterized Capture)\n",
+        "#           This requires 5 separate recordings from a Gain or EQ knob at 5 equal steps, using the Proteus_Capture.wav as input.\n",
+        "#           For example: 0% (or just above 0%), 25%, 50%, 75%, 100%\n",
+        "#           You must upload your five .wav files and re-name them: \n",
+        "#               \"out1.wav\", \"out2.wav\", \"out3.wav\", \"out4.wav\", \"out5.wav\"\n",
+        "#           Training will take significantly longer than a normal capture. \n",
+        "model=\"proteus_knob\"\n",
+        "!python prep_wav2.py $model -p \"./Configs/Parameterization-Config-Proteus.json\" --normalize true\n",
+        "!python dist_model_recnet.py -l \"RNN3-\"$model -is 2 -eps 300"
+      ],
+      "metadata": {
+        "id": "8MYDHLNWt64F"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# STEP 5. After Above Capture Process is Completed, Run this to generate a Proteus compatible model file.\n",
         "#         The model file will be located in the top level folder with the name \"newProteusModel.json\"\n",
         "#         May need to refresh the left hand file browser by clicking the refresh folder icon.\n",
@@ -117,7 +139,7 @@
       "metadata": {
         "id": "j4ypBZrXi5jM"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -151,7 +173,33 @@
         "#\n",
         "# 2. This catpure method is limited to non-time based effects (no Delay, Reverb, Flange, Phaser, etc.) \n",
         "#      It is intended for Amplifiers, Distortion/Overdrive/Boost and Compression(results on compressors vary)\n",
-        "# "
+        "# \n",
+        "# 3. For Parameterized Capture of an amp or pedal knob, if the knob at 0% means there is no volume out of \n",
+        "#      your device (such as a gain knob on an amplifier), then you should raise it slightly until your hear\n",
+        "#      volume out. The model training doesn't do well if one of the 5 steps is silent."
+      ],
+      "metadata": {
+        "id": "mwHTeJ6Kd3Lg"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "Welcome To Colaboratory",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "accelerator": "GPU"
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
       ],
       "metadata": {
         "id": "mwHTeJ6Kd3Lg"
