--- a/ProteusCapture.ipynb
+++ b/ProteusCapture.ipynb
@@ -194,7 +194,7 @@
         "\n",
         "1. Training will go through 300 epochs, beginning with a pre-trained starting point model. The number of epochs can be adjusted by changing the \"-eps\" value in the dist_model_recnet.py line on step 4 (a,b,c,d). You can run the same training step again to refine the model, and stop at any time. \n",
         "\n",
-        "2. This catpure method is limited to non-time based effects (no Delay, Reverb, Flange, Phaser, etc.) It is intended for Amplifiers, Distortion,Overdrive, Boost/Preamps. Results on Compressors vary. The same rules apply for catpuring a plugin or other digital audio effect.\n",
+        "2. This capture method is limited to non-time based effects (no Delay, Reverb, Flange, Phaser, etc.) It is intended for Amplifiers, Distortion, Overdrive, Boost, Preamps. Results on Compressors vary. The same rules apply for capturing a plugin or other digital audio effect.\n",
         "\n",
         "3. For ideal amplifier capture, record the direct out signal from a load box. Recommended to use a re-amp device when playing the ProteusCapture.wav out of your audio device for impedence matching. \n",
         "\n",
