--- a/ProteusCapture.ipynb
+++ b/ProteusCapture.ipynb
@@ -35,7 +35,7 @@
       "source": [
         "------------\n",
         "### **STEP 3** : SETUP ENVIRONMENT\n",
-        "###### Run this block to setup environment. May take a few minutes."
+        "###### Run this block to setup environment. May take a few minutes. Only run this once per Colab session."
       ],
       "metadata": {
         "id": "T0YQxFKX8toq"
