--- a/ProteusCapture.ipynb
+++ b/ProteusCapture.ipynb
@@ -6,6 +6,12 @@
         "\n",
         "# GuitarML Proteus Capture Instructions\n",
         "-------------\n",
+        "You will need the \"ProteusCapture.wav\" file to re-amp your gear. You can download this audio file here: [ProteusCapture.wav](https://github.com/GuitarML/Automated-GuitarAmpModelling/raw/proteus-capture/Data/Proteus_Capture.wav).\n",
+        "\n",
+        "Reamp your pedal, amp, or rig by running this audio signal through your device and record the output. For best results, to use a reamp box for pedals and a loadbox for amps. Render the new recording as a WAV file. **Please use 44.1kHz, 16-bit PCM, mono.**\n",
+        "Video tutorials are available on [Youtube](https://youtu.be/86oQuYHjpy0).\n",
+        "\n",
+        "-------------\n",
         "\n",
         "#####  **Step 1**. Click \"Runtime\" in the Colab top menu bar, then \"Change Runtime Type\" and select \"GPU\" and save. You have a limited number of consecutive GPU hours with the free version of Colab, but this will reset in a day or so. \n",
         "\n",
