--- a/ProteusCapture.ipynb
+++ b/ProteusCapture.ipynb
@@ -53,7 +53,8 @@
         "!git clone https://github.com/GuitarML/Automated-GuitarAmpModelling.git\n",
         "%cd Automated-GuitarAmpModelling/\n",
         "!git checkout proteus-capture\n",
-        "!git submodule update --init --recursive"
+        "!git submodule update --init --recursive\n",
+        "!pip install torch==2.3.0 # This is a work-around for the breaking changes in pytorch 2.4.0, please allow a few extra minutes for reinstalling dependencies"
       ],
       "metadata": {
         "id": "pzrdkYdTd3cX"
