Major rewrite of collab file

--- a/multi-param-collab.ipynb
+++ b/multi-param-collab.ipynb
@@ -4,94 +4,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Two-Parameter Amp Model Training\n",
-    "Based on GuitarML's Automated-GuitarAmpModelling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Setup Environment\n",
-    "!git clone https://github.com/GuitarML/Automated-GuitarAmpModelling\n",
-    "%cd Automated-GuitarAmpModelling\n",
-    "!git submodule update --init --recursive\n",
-    "#!pip install -r requirements.txt --ignore-requires-python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# GPU Check\n",
-    "import torch\n",
-    "print(\"GPU Available:\", torch.cuda.is_available())\n",
-    "if torch.cuda.is_available():\n",
-    "    print(\"GPU Name:\", torch.cuda.get_device_name(0))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Configuration file format\n",
-    "The parameter values are between 0.0 and 1.0\n",
+    "# Multi-parameter Amp Model Training\n",
+    "\n",
+    " Make sure this notebook is connected and using GPU. There is a button \"Connect\" in the top right corner.\n",
+    " You might need to buy compute credits.\n",
+    "\n",
+    "## Step 1: Get Data\n",
+    "\n",
+    "- Download the wave file to be played into the amp: [Proteus_Capture.wav](https://github.com/akaztp/Automated-GuitarAmpModelling-MultiParameter/raw/refs/heads/main/Data/Proteus_Capture.wav)\n",
+    "- Record the output from the amp with different values of its effects (i.e., parameters)\n",
+    "- Generate a JSON file named \"configuration.json\" with the description of the recorded wave files\n",
     "```JSON\n",
     "{\n",
     "    \"Number of Parameters\": 2,\n",
     "    \"Data Sets\":[\n",
     "    {\n",
-    "\t\"Parameters\": [ 0.0, 0.0 ],\n",
-    "\t\"TrainingClean\": \"./input.wav\",\n",
-    "\t\"TrainingTarget\": \"./0_0_output.wav\"\n",
+    "        \"Parameters\": [ 0.0, 0.0 ],\n",
+    "        \"TrainingClean\": \"./input.wav\",\n",
+    "        \"TrainingTarget\": \"./0_0_output.wav\"\n",
     "    },\n",
     "    {\n",
-    "\t\"Parameters\": [ 0.0, 0.25 ],\n",
-    "\t\"TrainingClean\": \"./input.wav\",\n",
-    "\t\"TrainingTarget\": \"./0_0.25_output.wav\"\n",
+    "        \"Parameters\": [ 0.0, 0.25 ],\n",
+    "        \"TrainingClean\": \"./input.wav\",\n",
+    "        \"TrainingTarget\": \"./0_0.25_output.wav\"\n",
     "    },\n",
     "    ...\n",
     "    ]\n",
     "}\n",
-    "```\n"
+    "```\n",
+    "Note: The parameters values are between 0.0 and 1.0\n",
+    "- Build a zip file with the \"configuration.json\" and the other wave files flat in the top level of the archive\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
-    "# Upload and Extract Training Data\n",
-    "from google.colab import files\n",
-    "print(\"Please upload a ZIP file named 'input.zip' containing training configuration and wavefiles.\")\n",
-    "uploaded = files.upload()\n",
+    "#@markdown ## Step 2: Setup Environment\n",
+    "!git clone https://github.com/akaztp/Automated-GuitarAmpModelling-MultiParameter\n",
+    "%cd Automated-GuitarAmpModelling-MultiParameter\n",
+    "!git submodule update --init --recursive\n",
+    "#!pip install -r requirements.txt --ignore-requires-python\n",
     "\n",
-    "!unzip input.zip\n",
-    "!ls -R input/"
+    "# GPU Check\n",
+    "import torch\n",
+    "print(\"GPU Available:\", torch.cuda.is_available())\n",
+    "if torch.cuda.is_available():\n",
+    "    print(\"GPU Name:\", torch.cuda.get_device_name(0))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
-    "# Prepare wav files for training using prep_wav.py\n",
+    "#@markdown ## Step 3: Upload and Extract Training Data\n",
+    "from google.colab import files\n",
+    "print(\"Please upload a ZIP file containing training configuration and wavefiles.\")\n",
+    "uploaded = files.upload()\n",
+    "if uploaded:\n",
+    "    for filename in uploaded.keys():\n",
+    "            if filename.endswith('.zip'):\n",
+    "                !unzip {filename} -d input\n",
+    "\n",
+    "    !ls -R input/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form"
+   },
+   "outputs": [],
+   "source": [
+    "#@markdown ## Step 4: Prepare wav files for training\n",
     "!python prep_wav2.py model -p \"./input/configuration.json\" # --normalize true"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
+    "#@markdown ## Step 5: Train\n",
     "epochs = 200 #@param {type: \"number\"}\n",
+    "hidden_size = 40 #@param {type: \"number\"}\n",
     "\n",
     "import json\n",
     "import os\n",
@@ -118,7 +126,7 @@
     "                print(f\"Number of parameters set to {num_params}\")\n",
     "                input_size = 1 + num_params\n",
     "                # Train the model using dist_model_recnet.py\n",
-    "                !python dist_model_recnet.py -l RNN3-model -eps {epochs} --seed 39 -is {input_size}\n",
+    "                !python dist_model_recnet.py -eps {epochs} --seed 39 -is {input_size} -hs {hidden_size} -ut LSTM -pf None -fn model -p amp\n",
     "        except json.JSONDecodeError:\n",
     "            print(f\"ERROR: Failed to parse {config_path}. The file is not valid JSON. Please check the format of your configuration file.\")\n",
     "        except Exception as e:\n",
@@ -140,7 +148,7 @@
  "metadata": {
   "accelerator": "GPU",
   "colab": {
-   "name": "Two-Parameter Amp Model Training",
+   "name": "Multi-Parameter Amp Model Training",
    "private_outputs": true,
    "provenance": []
   },
