Input wave files are now sourced from "input" folder. The configuration.json must only reference the file name.

--- a/multi-param-collab.ipynb
+++ b/multi-param-collab.ipynb
@@ -20,13 +20,13 @@
     "    \"Data Sets\":[\n",
     "    {\n",
     "        \"Parameters\": [ 0.0, 0.0 ],\n",
-    "        \"TrainingClean\": \"./input.wav\",\n",
-    "        \"TrainingTarget\": \"./0_0_output.wav\"\n",
+    "        \"TrainingClean\": \"input.wav\",\n",
+    "        \"TrainingTarget\": \"0_0_output.wav\"\n",
     "    },\n",
     "    {\n",
     "        \"Parameters\": [ 0.0, 0.25 ],\n",
-    "        \"TrainingClean\": \"./input.wav\",\n",
-    "        \"TrainingTarget\": \"./0_0.25_output.wav\"\n",
+    "        \"TrainingClean\": \"input.wav\",\n",
+    "        \"TrainingTarget\": \"0_0.25_output.wav\"\n",
     "    },\n",
     "    ...\n",
     "    ]\n",
