Fixed plot generation in collab file.

--- a/multi-param-collab.ipynb
+++ b/multi-param-collab.ipynb
@@ -141,7 +141,7 @@
    "source": [
     "# Name your config in the following command\n",
     "# The plots will be generated in the Results/modelName/ directory\n",
-    "!python plot.py model"
+    "!python plot.py model --model_name amp --pred_wav test_out_best.wav"
    ]
   }
  ],
