Several improvements to multi-param-collab.ipynb

--- a/multi-param-collab.ipynb
+++ b/multi-param-collab.ipynb
@@ -6,9 +6,6 @@
    "source": [
     "# Multi-parameter Amp Model Training\n",
     "\n",
-    " Make sure this notebook is connected and using GPU. There is a button \"Connect\" in the top right corner.\n",
-    " You might need to buy compute credits.\n",
-    "\n",
     "## Step 1: Get Data\n",
     "\n",
     "- Download the wave file to be played into the amp: [Proteus_Capture.wav](https://github.com/akaztp/Automated-GuitarAmpModelling-MultiParameter/raw/refs/heads/main/Data/Proteus_Capture.wav)\n",
@@ -44,9 +41,11 @@
    },
    "outputs": [],
    "source": [
-    "#@markdown ## Step 2: Setup Environment\n",
+    "#@markdown ## Step 2: Setup environment, upload and extract training data\n",
+    "%cd /content\n",
+    "!rm -rf Automated-GuitarAmpModelling-MultiParameter\n",
     "!git clone https://github.com/akaztp/Automated-GuitarAmpModelling-MultiParameter\n",
-    "%cd Automated-GuitarAmpModelling-MultiParameter\n",
+    "%cd /content/Automated-GuitarAmpModelling-MultiParameter\n",
     "!git submodule update --init --recursive\n",
     "#!pip install -r requirements.txt --ignore-requires-python\n",
     "\n",
@@ -54,27 +53,15 @@
     "import torch\n",
     "print(\"GPU Available:\", torch.cuda.is_available())\n",
     "if torch.cuda.is_available():\n",
-    "    print(\"GPU Name:\", torch.cuda.get_device_name(0))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "cellView": "form"
-   },
-   "outputs": [],
-   "source": [
-    "#@markdown ## Step 3: Upload and Extract Training Data\n",
+    "    print(\"GPU Name:\", torch.cuda.get_device_name(0))\n",
+    "\n",
     "from google.colab import files\n",
     "print(\"Please upload a ZIP file containing training configuration and wavefiles.\")\n",
     "uploaded = files.upload()\n",
     "if uploaded:\n",
     "    for filename in uploaded.keys():\n",
     "            if filename.endswith('.zip'):\n",
-    "                !unzip {filename} -d input\n",
-    "\n",
-    "    !ls -R input/"
+    "                !unzip {filename} -d input"
    ]
   },
   {
@@ -85,7 +72,7 @@
    },
    "outputs": [],
    "source": [
-    "#@markdown ## Step 4: Prepare wav files for training\n",
+    "#@markdown ## Step 3: Prepare wav files for training\n",
     "!python prep_wav2.py model -p \"./input/configuration.json\" # --normalize true"
    ]
   },
@@ -97,7 +84,7 @@
    },
    "outputs": [],
    "source": [
-    "#@markdown ## Step 5: Train\n",
+    "#@markdown ## Step 4: Train\n",
     "epochs = 200 #@param {type: \"number\"}\n",
     "hidden_size = 40 #@param {type: \"number\"}\n",
     "\n",
@@ -136,12 +123,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form"
+   },
    "outputs": [],
    "source": [
-    "# Name your config in the following command\n",
+    "#@markdown ## Step 5: Plot the result error-to-signal (optional)\n",
     "# The plots will be generated in the Results/modelName/ directory\n",
     "!python plot.py model --model_name amp --pred_wav test_out_best.wav"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form"
+   },
+   "outputs": [],
+   "source": [
+    "#@markdown ## Step 6: Download the results in a zip file. The model file to use is \"model_best.json\".\n",
+    "!if [ -f results.zip ]; then rm results.zip; fi\n",
+    "!cd Results/amp && zip ../../results.zip *\n",
+    "!cd ../../\n",
+    "\n",
+    "# Download the zip file\n",
+    "from google.colab import files\n",
+    "files.download('results.zip')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notes and troubleshooting\n",
+    "\n",
+    "- Make sure this notebook is connected and using GPU. There is a button \"Connect\" in the top right corner.  You have a limited number of consecutive GPU hours with the free version of Colab, but this will reset in a day or so. You might need to buy compute credits for more intensive work.\n",
+    "- The \"Train\" step can end before the specified number of epochs if the model stops improving enough. This step can also be stopped at any time.\n",
+    "- A model can be refined in more than one run of the \"Train\" step, by increasing the \"epochs\" and run the \"Train\" step again.\n",
+    "- The final loss values during training should be less than 0.08 to be considered successful. A loss of 0.02 or less is ideal. Higher than 0.10 indicates difficulty in training a model from the device, but note that mic'd amps will typically have a higher loss due to the complexities of the cab/mic. If the loss remains at 0.75 or higher, this could indicate a problem with the out.wav file, either from audio misalignment or error during the upload to Colab.\n",
+    "- For Parameterized Capture of an amp knob, if the device knob at 0% means there is no volume out of your device (such as a gain knob on an amplifier), then you should raise it slightly until your hear volume out. The model training doesn't do well if one of the target wavefiles is silent."
    ]
   }
  ],
