Added more info to the ipynb

--- a/multi-param-collab.ipynb
+++ b/multi-param-collab.ipynb
@@ -9,7 +9,7 @@
     "## Step 1: Get Data\n",
     "\n",
     "- Download the wave file to be played into the amp: [Proteus_Capture.wav](https://github.com/akaztp/Automated-GuitarAmpModelling-MultiParameter/raw/refs/heads/main/Data/Proteus_Capture.wav)\n",
-    "- Record the output from the amp with different values of its effects (i.e., parameters)\n",
+    "- Record the output from the amp with different values of its effects (i.e., parameters). Wave files are expected to be in 48kHz. Sample format can be any, but the higher the better like PCM24 or FP32.\n",
     "- Generate a JSON file named \"configuration.json\" with the description of the recorded wave files\n",
     "```JSON\n",
     "{\n",
@@ -141,7 +141,7 @@
    },
    "outputs": [],
    "source": [
-    "#@markdown ## Step 6: Download the results in a zip file. The model file to use is \"model_best.json\".\n",
+    "#@markdown ## Step 6: Download the results in a zip file.\n",
     "!if [ -f results.zip ]; then rm results.zip; fi\n",
     "!cd Results/amp && zip ../../results.zip *\n",
     "!cd ../../\n",
@@ -149,6 +149,16 @@
     "# Download the zip file\n",
     "from google.colab import files\n",
     "files.download('results.zip')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 7:  Use the model in the plugin\n",
+    "The model file to use in the plugin is \"model_best.json\" from the downloaded archive.\n",
+    "For more than one parameter, identify the effect names and their order. This info is needed in the plugin.\n",
+    "Suggestion: rename the model json file to have the effects names, like \"gibson-saturn_model_bass-treble.json\""
    ]
   },
   {
