--- a/multi-param-collab.ipynb
+++ b/multi-param-collab.ipynb
@@ -84,40 +84,29 @@
    },
    "outputs": [],
    "source": [
-    "#@markdown ## Step 4: Train\n",
+    "#@markdown ## Step 4: Train with experiments and report\n",
     "epochs = 200 #@param {type: \"number\"}\n",
-    "hidden_size = 40 #@param {type: \"number\"}\n",
+    "hidden_size1 = 15 #@param {type: \"number\"}\n",
+    "hidden_size2 = 20 #@param {type: \"number\"}\n",
+    "hidden_size3 = 30 #@param {type: \"number\"}\n",
+    "hidden_size4 = 40 #@param {type: \"number\"}\n",
+    "hidden_size5 = 50 #@param {type: \"number\"}\n",
+    "#@markdown Set any size to 0 to exclude it from the experiment\n",
     "\n",
-    "import json\n",
-    "import os\n",
+    "# Filter out zero values\n",
+    "hidden_sizes = [size for size in [hidden_size1, hidden_size2, hidden_size3, hidden_size4, hidden_size5] if size > 0]\n",
     "\n",
-    "# Check if input directory exists\n",
-    "if not os.path.exists(\"./input\"):\n",
-    "    print(\"ERROR: Input directory not found. Please make sure to upload and extract the input.zip file first.\")\n",
-    "else:\n",
-    "    # Check if configuration.json exists\n",
-    "    config_path = \"./input/configuration.json\"\n",
-    "    if not os.path.exists(config_path):\n",
-    "        print(f\"ERROR: Configuration file not found at {config_path}. Please check that input.zip contains a configuration.json file.\")\n",
-    "    else:\n",
-    "        try:\n",
-    "            # Try to read and parse the JSON file\n",
-    "            with open(config_path, \"r\") as f:\n",
-    "                config = json.load(f)\n",
-    "            \n",
-    "            # Check if \"Number of Parameters\" field exists in the JSON\n",
-    "            if \"Number of Parameters\" not in config:\n",
-    "                print('ERROR: \"Number of Parameters\" field not found in configuration.json. Please check the format of your configuration file.')\n",
-    "            else:\n",
-    "                num_params = config[\"Number of Parameters\"]\n",
-    "                print(f\"Number of parameters set to {num_params}\")\n",
-    "                input_size = 1 + num_params\n",
-    "                # Train the model using dist_model_recnet.py\n",
-    "                !python dist_model_recnet.py -eps {epochs} --seed 39 -is {input_size} -hs {hidden_size} -ut LSTM -pf None -fn model -p amp\n",
-    "        except json.JSONDecodeError:\n",
-    "            print(f\"ERROR: Failed to parse {config_path}. The file is not valid JSON. Please check the format of your configuration file.\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"ERROR: An unexpected error occurred while reading the configuration file: {str(e)}\")\n"
+    "# Import the experiment class\n",
+    "from hidden_size_experiment import HiddenSizeExperiment\n",
+    "\n",
+    "# Create an experiment with custom hidden sizes\n",
+    "experiment = HiddenSizeExperiment(\n",
+    "    hidden_sizes=hidden_sizes,  # Your custom hidden sizes\n",
+    "    epochs=epochs,              # Number of epochs per model\n",
+    ")\n",
+    "\n",
+    "# Run the experiment\n",
+    "results = experiment.run_experiment()"
    ]
   },
   {
@@ -129,8 +118,28 @@
    "outputs": [],
    "source": [
     "#@markdown ## Step 5: Plot the result error-to-signal (optional)\n",
+    "hidden_size = 40 #@param {type: \"number\"}\n",
+    "\n",
     "# The plots will be generated in the Results/modelName/ directory\n",
-    "!python plot.py model --model_name amp --pred_wav test_out_best.wav"
+    "output = !python plot.py model --model_name hs_{hidden_size} --pred_wav test_out_best.wav\n",
+    "\n",
+    "from IPython.display import display, Image\n",
+    "import re\n",
+    "\n",
+    "match = re.search(r'NOTEBOOK_DISPLAY_IMAGES:(.*?),(.*?)$', '\\n'.join(output), re.MULTILINE)\n",
+    "\n",
+    "if match:\n",
+    "    comparison_path = match.group(1)\n",
+    "    detail_path = match.group(2)\n",
+    "    \n",
+    "    # Display the images\n",
+    "    print(\"\\nSignal Comparison Plot:\")\n",
+    "    display(Image(comparison_path))\n",
+    "    \n",
+    "    print(\"\\nDetail Signal Comparison Plot:\")\n",
+    "    display(Image(detail_path))\n",
+    "else:\n",
+    "    print(\"No image paths found in the output.\")"
    ]
   },
   {
@@ -142,13 +151,15 @@
    "outputs": [],
    "source": [
     "#@markdown ## Step 6: Download the results in a zip file.\n",
-    "!if [ -f results.zip ]; then rm results.zip; fi\n",
-    "!cd Results/amp && zip ../../results.zip *\n",
+    "hidden_size = 40 #@param {type: \"number\"}\n",
+    "\n",
+    "!if [ -f results_hs_{hidden_size}.zip ]; then rm results_hs_{hidden_size}.zip; fi\n",
+    "!cd Results/hs_{hidden_size} && zip ../../results_hs_{hidden_size}.zip *\n",
     "!cd ../../\n",
     "\n",
     "# Download the zip file\n",
     "from google.colab import files\n",
-    "files.download('results.zip')"
+    "files.download(f'results_hs_{hidden_size}.zip')\n"
    ]
   },
   {
@@ -169,9 +180,24 @@
     "\n",
     "- Make sure this notebook is connected and using GPU. There is a button \"Connect\" in the top right corner.  You have a limited number of consecutive GPU hours with the free version of Colab, but this will reset in a day or so. You might need to buy compute credits for more intensive work.\n",
     "- The \"Train\" step can end before the specified number of epochs if the model stops improving enough. This step can also be stopped at any time.\n",
-    "- A model can be refined in more than one run of the \"Train\" step, by increasing the \"epochs\" and run the \"Train\" step again.\n",
+    "- A model can be refined in more than one run of the \"Train\" step, by specifying more \"epochs\" and run the \"Train\" step again.\n",
     "- The final loss values during training should be less than 0.08 to be considered successful. A loss of 0.02 or less is ideal. Higher than 0.10 indicates difficulty in training a model from the device, but note that mic'd amps will typically have a higher loss due to the complexities of the cab/mic. If the loss remains at 0.75 or higher, this could indicate a problem with the out.wav file, either from audio misalignment or error during the upload to Colab.\n",
-    "- For Parameterized Capture of an amp knob, if the device knob at 0% means there is no volume out of your device (such as a gain knob on an amplifier), then you should raise it slightly until your hear volume out. The model training doesn't do well if one of the target wavefiles is silent."
+    "- For Parameterized Capture of an amp knob, if the device knob at 0% means there is no volume out of your device (such as a gain knob on an amplifier), then you should raise it slightly until your hear volume out. The model training doesn't do well if one of the target wavefiles is silent.\n",
+    "\n",
+    "\n",
+    "# Factors to Consider When Choosing Hidden Size\n",
+    "\n",
+    "- Complexity of the Audio Transformation:\n",
+    "  - Higher complexity (like modeling complex distortion effects with many parameters) requires larger hidden sizes (40+)\n",
+    "  - Simpler transformations can work with smaller hidden sizes (20 or less)\n",
+    "- Available Training Data:\n",
+    "  - More training data supports larger hidden sizes without overfitting\n",
+    "  - Limited data may require smaller hidden sizes to prevent overfitting\n",
+    "- Computational Resources:\n",
+    "  - Larger hidden sizes require more memory and computational power\n",
+    "  - Consider your hardware limitations during both training and inference\n",
+    "- Real-time Performance Requirements:\n",
+    "  - If the model will be used in real-time applications, smaller hidden sizes will be more efficient\n"
    ]
   }
  ],
