Loosen python packages version requirements to try to be compatible with python 3 in new google collab.

--- a/multi-param-collab.ipynb
+++ b/multi-param-collab.ipynb
@@ -47,7 +47,7 @@
     "!git clone https://github.com/akaztp/Automated-GuitarAmpModelling-MultiParameter\n",
     "%cd /content/Automated-GuitarAmpModelling-MultiParameter\n",
     "!git submodule update --init --recursive\n",
-    "#!pip install -r requirements.txt --ignore-requires-python\n",
+    "!pip install -r requirements.txt --ignore-requires-python\n",
     "\n",
     "# GPU Check\n",
     "import torch\n",
