Changed env PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python which tells protobuf to use its pure-Python implementation instead of the C++ implementation. While this is slower, it avoids the compatibility issues between newer protobuf versions and TensorBoard.

--- a/multi-param-collab.ipynb
+++ b/multi-param-collab.ipynb
@@ -47,6 +47,10 @@
     "!git clone https://github.com/akaztp/Automated-GuitarAmpModelling-MultiParameter\n",
     "%cd /content/Automated-GuitarAmpModelling-MultiParameter\n",
     "!git submodule update --init --recursive\n",
+    "import os\n",
+     "# Set environment variable for protobuf to use pure-Python implementation\n",
+     "# This is slower but avoids compatibility issues with newer protobuf versions\n",
+     "os.environ[\"PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION\"] = \"python\"\n",
     "!pip install -r requirements.txt --ignore-requires-python\n",
     "\n",
     "# GPU Check\n",
