Disabled custom pip install. It was too slow and giving errors.

--- a/multi-param-collab.ipynb
+++ b/multi-param-collab.ipynb
@@ -51,7 +51,7 @@
      "# Set environment variable for protobuf to use pure-Python implementation\n",
      "# This is slower but avoids compatibility issues with newer protobuf versions\n",
      "os.environ[\"PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION\"] = \"python\"\n",
-    "!pip install -r requirements.txt --ignore-requires-python\n",
+    "#!pip install -r requirements.txt --ignore-requires-python\n",
     "\n",
     "# GPU Check\n",
     "import torch\n",
